1.3.0 unreleased
================

 * Corrected i18n markup in schemata.py for the nextprevious field. This closes
   http://dev.plone.org/plone/ticket/7517.
   [hannosch]

 * The edit tab in ZMI should not be displayed for ATImage/ATFIle objects.
   http://dev.plone.org/archetypes/ticket/763
   [deo]

 * Added tests for utils.dt2DT and utils.DT2dt that expose a bug as found
   in Vice regarding converted dates becoming naive of timezones.  Fixed.
   [matthewwilkes]

 * Fixed http://dev.plone.org/plone/ticket/7102: uploading xhtml
   files was not working correctly.  Thanks to lucie for the patch.
   [alecm]

 * Fixed #6981 http://dev.plone.org/plone/ticket/6981 and #7467
   http://dev.plone.org/plone/ticket/7467, bugs in "Item Type"
   criterion - it used portal type Title as both key and value
   in multiselection widget, but the key was incorrectly translated.
   Fixed to show the translated portal type Title to the user, but to
   store the untranslated Title. Added a browser test for #6981
   which is currently disabled because the test browser does not
   translate pages
   [naro, jensens, sirgarr]

 * Moved interface declarations from ZCML to the classes themselves.
   [hannosch]

 * Fix Unicode encode error in formatCatalogMetadata.py when atct_topic_view.py
   uses it to display in a table a text field (like 'location') whose contents
   can't be encoded to ascii.
   http://dev.plone.org/plone/ticket/7237
   [stevem]

 * Adjusted tests to new Archetypes policy on return values.
   [hannosch]

 * Ported editing.txt, events.txt, reindex_sanity.txt and traversal.txt tests
   from Archetypes and adjusted them for the ATContentTypes specific behavior.
   [hannosch]

 * Adjusted tests to changed test base classes of Archetypes.
   [hannosch]

 * Removed the unmaintained utilities folder including the report scripts.
   [hannosch]

 * Moved old_folder_contents over from CMFPlone as it is still used in
   atct_topic_subtopics.pt.
   [hannosch]
