@@ -1,6 +1,10 @@
 1.3.0 unreleased
 ================
 
+ * Remove __bobo_traverse__ from ATNewsItem and ATImage. Instead rely on the
+   generic ImageTraverse publish traverser from Archetypes.
+   [wichert]
+
  * Corrected i18n markup in schemata.py for the nextprevious field. This closes
    http://dev.plone.org/plone/ticket/7517.
    [hannosch]
